# chukcha_news

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: asr.yaml  chukchi_eval.yaml  fieldasr.yaml  llm_chukchi.yaml  mt.yaml  mt_clean.yaml  project.yaml  resources.yaml  server.yaml  tts.yaml  tts_top1h.yaml
scripts/: pipeline_status.py
scripts/bootstrap/: download_mt_models.py  download_resources.py  manage_assets.py  package_runtime_artifacts.py  scan_audio.py  sync_assets.sh  sync_bucketru.sh
scripts/data/: classify_asr_audio.py  filter_asr_pseudolabels.py  merge_asr_filter_signals.py  prepare_asr.py  prepare_fieldasr_dataset.py  prepare_llm_chukchi_dataset.py  prepare_monolingual_corpus.py  prepare_mt_dataset.py  prepare_parallel_corpus.py  prepare_tts_training_dataset.py  promote_asr_pseudolabels.py  score_asr_chukchi_text.py  select_top_tts_hour.py  select_tts_pseudolabels.py
scripts/evaluate/: diagnose_mt_roundtrip.py  evaluate_chukchi_generation.py  evaluate_mt.py  evaluate_tts.py
scripts/inference/: translate.py
scripts/server/: app.py
scripts/showcase/: build_showcase.py
scripts/train/: prepare_tts_training_config.py  run_mt_pipeline.py  (+5 more)
showcase/: index.html  manifest.json  showcase.css
tests/: test_asr_audio_classification.py  test_asr_filter_merging.py  test_asr_preprocessing.py  test_asr_pseudolabel_promotion.py  test_asr_text_filtering.py  test_chukchi_text_lm.py  test_download_mt_models.py  test_fieldasr_preparation.py  test_mt_modeling.py  test_mt_pipeline.py  test_mt_pipeline_runner.py  test_tts_training_dataset.py
(+25 files in other folders)
